sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:6: error: ')' expected but ',' found.
  for (i <-lgr-2,0)
                ^AlgBubbleSort2:16: error: illegal start of simple expression
} 
^